# curse_work_rust

./: Grafy.drawio
taifya-course-work/: .gitignore  Cargo.toml  README.md
taifya-course-work/examples/: add.l  digit_out_of_radix.l  file.l  invalid_assignment.l  missing_comment_end.l  missing_end.l  numbers.l
taifya-course-work/lang-core/: Cargo.toml
taifya-course-work/lang-core/src/: lib.rs
taifya-course-work/lang-core/src/analyzer/: analyzer.rs  error.rs  mod.rs  tests.rs
taifya-course-work/lang-core/src/codegen/: codegen.rs  mod.rs  variable.rs
taifya-course-work/lang-core/src/environment/: environment.rs  mod.rs  value.rs
taifya-course-work/lang-core/src/eval/: mod.rs  tests.rs
taifya-course-work/lang-core/src/lexer/: error.rs  lexer.rs  mod.rs  table_element.rs  tests.rs  token.rs
taifya-course-work/lang-core/src/parser/: ast.rs  error.rs  mod.rs  parser.rs  tests.rs
taifya-course-work/lang-core/src/utils/: diagnostic.rs  error.rs  mod.rs  src_span.rs  warning.rs
taifya-course-work/langc/: Cargo.toml
taifya-course-work/langc/src/: cli.rs  compiler.rs  main.rs  rlpl.rs  rppl.rs
